<resources>
    <string name="app_name">MGame</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recently">Recently</string>
    <string name="all_games">All Games</string>
    <string name="create">Create</string>
    <string name="memory_game">Memory Game</string>
    <string name="you_have_15_attempts_to_match_all_the_characters">You have 15 attempts to match\nall the Characters</string>
    <string name="attempts">Attempts</string>
    <string name="score">0/15</string>
    <string name="attempts_counter">%1$d/15</string>
    <string name="title">Winner</string>
    <string name="supporting_text">You finished the game</string>
    <string name="accept">Accept</string>
    <string name="try_again">Try again</string>
    <string name="cancel">Cancel</string>
    <string name="supporting_text_game_over">We have run out of attempts\ndo you want to try again?</string>
    <string name="title_game_over">OOOPS!</string>
    <string name="id_cards">cards</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="or">Or</string>
    <string name="login_with_google">Login with Google</string>
    <string name="new_to_logistics">New to Logistics?</string>
    <string name="register">Register</string>
    <string name="sign_up">Sign up</string>
    <string name="user_name">User name</string>
    <string name="continue_text">Continue</string>
    <string name="joined_us_before">Joined us before?</string>
    <string name="by_signing_up_you_re_agree_to_our">By signing up, you\'re agree to our</string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="and">and</string>
    <string name="forgot_n_password">Forgot\nPassword?</string>
    <string name="don_t_worry_it_happens_please_enter_the_address_associated_with_your_account">Don\'t worry! It happens. Please enter the address associated with your account.</string>
    <string name="submit">Submit</string>
    <string name="configuration">Settings</string>
    <string name="account">Account</string>
    <string name="logout">Logout</string>
    <string name="add_new_task">New task</string>
    <string name="login__error_user_no_registered">There is no user registered with this email address.</string>
    <string name="login__error_wrong_password">Incorrect password</string>
    <string name="login__error_enter_email">Enter your email address.</string>
    <string name="login__error_enter_password">Enter your password.</string>
    <string name="signup__signup_successfully">Account created successfully</string>
    <string name="signup__error_password_insecure">Your password must be at least 6 characters long</string>
    <string name="signup__error_passwords_match">Passwords do not match</string>
    <string name="signup__error_email_already_registered">There is already an account registered with this email address</string>
    <string name="profile">Profile</string>
    <string name="reset_email_sent">reset email sent</string>
    <string name="termi_conditions">terms and conditions</string>
    <string name="terms">Show terms and conditions</string>
    <string name="privacy">Show Privacy Policy</string>
    <string name="msg_error_getting_user_data">An error occurred while obtaining user information.</string>
    <string name="msg_something_went_wrong">Ooops, something went wrong, try again.</string>
    <string name="you_have_not_played_recently">You have not played recently</string>
    <string name="click_here_for_more_games">Click here for more games</string>
</resources>